# StegStash

./: .gitignore  CHANGELOG.md  DOCS.md  README.md  make.py  pyproject.toml  requirements.txt  setup.py  test.pptx  text.docx
DOCS/: README.md
DOCS/stegstash/: fileappend.md  homoglyphs.md  imagelsb.md  index.md  lsb.md  msoffice.md  odf.md  soundlsb.md  utils.md  zerowidth.md  zipfile.md
stegstash/: __init__.py  fileappend.py  homoglyphs.py  imagelsb.py  lsb.py  msoffice.py  odf.py  simplecrypt.py  soundlsb.py  utils.py  zerowidth.py  zipfile.py
test/: encode.txt  encodeComment.docx  encodeComment.odt  encodeFile.docx  encodeFile.odt  encodeZW.txt  license.md  originalDoc.docx  originalDoc.odt  originalText.txt  simpleEncode.txt  simpleEncodeZW.txt  test.py
