[tool.poetry]
name = "stegstash"
version = "2021"
description = "Provides multiple methods to hide and retrieve data"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Environment :: MacOS X",
	"Environment :: Win32 (MS Windows)",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Security",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/StegStash"
repository = "https://github.com/FHPythonUtils/StegStash"
documentation = "https://github.com/FHPythonUtils/StegStash/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
soundfile = "<2,>=0.10.3"
numpy = "<3,>=1.19.5"
metprint = "<2022,>=2020.7.1"
mutablezip = "<2022,>=2020.1"
ansitoimg = "<2022,>=2020.4.4"
Pillow = "<10,>=8.1.0"
SoundFile = "<2,>=0.10.3"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
